--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ attrs==23.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.2
 Brotli==1.1.0
+bs4==0.0.2
 certifi==2024.7.4
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -25,6 +26,7 @@ pycparser==2.22
 pycryptodomex==3.20.0
 PyNaCl==1.5.0
 python-dotenv==1.0.1
+rapidfuzz==3.9.5
 requests==2.32.3
 soupsieve==2.5
 urllib3==2.2.2
